<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_owner"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.tony.name_app.Activities.AddOwner">

    <EditText
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/edit_text_owner_hint"
        android:imeOptions="actionDone" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bilde"
        android:background="@color/colorPrimary"
        android:adjustViewBounds="false"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_weight="0.25"
        android:layout_margin="4.0dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="takePicture"
        android:text="@string/button_take_picture"
        android:id="@+id/button_add" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="addOwner"
        android:text="@string/button_add_person" />

    <TextView
        android:id="@+id/targeturi"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
